--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 
         <div class="container">
         <div class="wrapper">
+            <section>
             <img src="images/illustration-hero.svg" alt="" class="firstimg">
             <h1>Order Summary</h1>
 
@@ -35,6 +36,7 @@
             <button>Proceed to Payment</button>
         </div>
             <p class="cancel">Cancel Order</p>
+                </section>
         </div>
     </div>
       
