--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     </head>
     <body>
 
-        <div class="container">
+        <main>
         <div class="wrapper">
             <section>
             <img src="images/illustration-hero.svg" alt="" class="firstimg">
@@ -38,7 +38,7 @@
             <p class="cancel">Cancel Order</p>
                 </section>
         </div>
-    </div>
+    </main>
       
 
     </body>
